--- a/nahbah-frontend/index.html
+++ b/nahbah-frontend/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Not A House But A Home - Sustainable shelter designs using repurposed materials. Browse, contribute, and download building plans." />
     <title>Not A House But A Home</title>
     <!-- Import Inter font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
